--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -328,8 +328,8 @@
 
                 $.get(Routing.generate('admin_ajax_email_message', {id: user_id, match_user_id: match_user_id}), function (resp){
 
-                    $('#match_email_to_user').html(resp.user_message);
-                    $('#match_email_to_match_user').html(resp.match_user_message);
+                    $('#match_email_to_user').val(resp.user_message);
+                    $('#match_email_to_match_user').val(resp.match_user_message);
 
                     $('#match_match_user_id').val(match_user_id);
                     $('#btn-approve-send-emails').removeClass('disabled');
