--- a/app/Resources/views/admin2/default/index.html.twig
+++ b/app/Resources/views/admin2/default/index.html.twig
@@ -17,7 +17,7 @@
                         <ul class="dropdown-menu city-dropdown" aria-labelledby="dropdownMenu1">
                             {% for city in cities %}
                                 <li>
-                                    <a href="#" data-path="{{ path('admin_start', {'id': city.id}) }}" data-city-id="{{ city.id }}" data-city-name="{{ city.name }}">{{ city.name }}</a>
+                                    <a href="{{ path(app.request.attributes.get('_route')) }}#{{ city.id }}" data-path="{{ path('admin_start', {'id': city.id}) }}" id="city-{{ city.id }}" data-city-id="{{ city.id }}" data-city-name="{{ city.name }}">{{ city.name }}</a>
                                 </li>
                             {% endfor %}
                         </ul>
@@ -77,6 +77,8 @@
 
         $(document).ready(function() {
 
+            var currentCityId = {{ city.id }};
+
             var table = $('#match-users').DataTable({
                 "paging": false,
                 "bInfo": false,
@@ -97,20 +99,35 @@
             $('.show-more-btn').on( 'click', function (e) {
                 e.preventDefault();
 
-                showMoreResults($('#dropdownMenu1').find('.selection').val(), $('.show-more-btn').data('next-page'));
+                var $selected   = $('#dropdownMenu1').find('.selection');
+                var cityId      = $selected.val();
+
+                showMoreResults(cityId, $('.show-more-btn').data('next-page'));
             } );
 
-            $(".city-dropdown li a").click(function(){
-                $(this).closest(".dropdown").find('.selection').text($(this).text());
-                $(this).closest(".dropdown").find('.selection').val($(this).data('city-id'));
-                $('.stat-city-name').html($(this).text());
-                table.clear();
+            $(".city-dropdown li a").click(function(e){
+                e.preventDefault();
+
+                var href    = $(this).attr('href');
+                var text    = $(this).text();
+
+                history.pushState(null, text, href);
+
+                $(this).closest(".dropdown").removeClass('open');
+
                 showMoreResults($(this).data('city-id'), 1);
             });
 
             var showMoreResults = function (id, page) {
-                $.get(Routing.generate('ajax_by_city', {id: id, page: page}), function (resp) {
+                var $link   = $(".city-dropdown li a#city-"+id);
+                var href    = $link.attr('href');
+                var text    = $link.text();
+                $link.closest(".dropdown").find('.selection').text(text);
+                $link.closest(".dropdown").find('.selection').val(id);
+                $('.stat-city-name').html($link.text());
+                table.clear();
 
+                $.get(Routing.generate('ajax_by_city', {id: id, page: page}), function (resp) {
                     if (resp.success) {
                         $('.learners-num').html(resp.newUsers+' new');
                         $('.established-num').html(resp.establishedUsers+' established');
@@ -126,8 +143,24 @@
                 });
             }
 
-            // Automatically add a first row of data
-            //$('.show-more-btn').click();
+            if (history.pushState) {
+                window.addEventListener("popstate", function(e) {
+                    var cityId = window.location.hash.substring(1);
+                    showMoreResults(cityId, 1);
+                });
+            } else {
+                window.attachEvent("onhashchange", function(e) {
+                    var cityId = window.location.hash.substring(1);
+                    showMoreResults(cityId, 1);
+                });
+            }
+
+            if (window.location.hash.length) {
+                var cityId = window.location.hash.substring(1);
+                showMoreResults(cityId, 1);
+            } else if (currentCityId) {
+                $(".city-dropdown li a#city-"+currentCityId).trigger('click');
+            }
         });
     </script>
 {% endblock %}
