--- a/app/Resources/views/admin2/default/index.html.twig
+++ b/app/Resources/views/admin2/default/index.html.twig
@@ -1,68 +1,35 @@
-{% extends 'base.html.twig' %}
+{% extends 'admin2/default/base.html.twig' %}
 
-{% block stylesheets %}
-    <link href="/css/dataTables.bootstrap.min.css" rel="stylesheet">
-{% endblock %}
-
-{% block body %}
-    <div class="inner-page testimonial">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="dropdown">
-                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            <span class="selection">{{ 'match.select_region'|trans }}</span>
-                            <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu city-dropdown" aria-labelledby="dropdownMenu1">
-                            {% for city in cities %}
-                                <li>
-                                    <a href="{{ path(app.request.attributes.get('_route')) }}#{{ city.id }}" data-path="{{ path('admin_start', {'id': city.id}) }}" id="city-{{ city.id }}" data-city-id="{{ city.id }}" data-city-name="{{ city.name }}">{{ city.name }}</a>
-                                </li>
-                            {% endfor %}
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-8">
-                    <a href="#" class="btn btn-default btn-md">{{ 'match.find_matches'|trans }}</a>
-                    <a href="#" class="btn btn-default btn-md">{{ 'match.manual_handling'|trans }}</a>
-                    <a href="#" class="btn btn-default btn-md">{{ 'match.statistics'|trans }}</a>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 40px;">
-                <div class="col-md-12">
-                    <p>Hi! Right now we have <strong class="learners-num">{{ newUsers|length }} new</strong> &amp; <strong class="established-num">{{ establishedUsers|length }} established</strong> to match in <span class="stat-city-name">{{ city.name }}</span>. Thank you for helping out!</p>
-                    <p>Last month we matched 30 people, so far we have matched 16 people this month.</p>
-                </div>
-            </div>
-            <div class="row" style="margin-top: 40px;">
-                <h1>1. Choose a person to find a match for</h1>
-                <p>The people that have been waiting longest are displayed on top. "Match"-percentage tells you how good of a match the system could find.</p>
-                <table id="match-users" class="table table-bordered" cellspacing="0" width="100%">
-                    <thead>
-                    <tr>
-                        <th id="request_date">{{ 'Date for request'|trans }}</th>
-                        <th id="name">{{ 'Name'|trans }}</th>
-                        <th id="email">{{ 'Email'|trans }}</th>
-                        <th id="category">{{ 'Category'|trans }}</th>
-                        <th id="action">{{ 'Action'|trans }}</th>
-                    </tr>
-                    </thead>
-                    <tbody class="persons-list-body"></tbody>
-                </table>
-                <div class="text-center">
-                    <a href="#" class="btn btn-lg btn-default show-more-btn disabled" data-next-page="1">{{ 'Show 25 more'|trans }}</a>
-                </div>
-            </div>
+{% block default_content %}
+    <div class="row" style="margin-top: 40px;">
+        <div class="col-md-12">
+            <p>Hi! Right now we have <strong class="learners-num">{{ newUsers|length }} new</strong> &amp; <strong class="established-num">{{ establishedUsers|length }} established</strong> to match in <span class="stat-city-name">{{ city.name }}</span>. Thank you for helping out!</p>
+            <p>Last month we matched 30 people, so far we have matched 16 people this month.</p>
         </div>
     </div>
-
+    <div class="row" style="margin-top: 40px;">
+        <h1>1. Choose a person to find a match for</h1>
+        <p>The people that have been waiting longest are displayed on top. "Match"-percentage tells you how good of a match the system could find.</p>
+        <table id="match-users" class="table table-bordered" cellspacing="0" width="100%">
+            <thead>
+            <tr>
+                <th id="request_date">{{ 'Date for request'|trans }}</th>
+                <th id="name">{{ 'Name'|trans }}</th>
+                <th id="email">{{ 'Email'|trans }}</th>
+                <th id="category">{{ 'Category'|trans }}</th>
+                <th id="action">{{ 'Action'|trans }}</th>
+            </tr>
+            </thead>
+            <tbody class="persons-list-body"></tbody>
+        </table>
+        <div class="text-center">
+            <a href="#" class="btn btn-lg btn-default show-more-btn disabled" data-next-page="1">{{ 'Show 25 more'|trans }}</a>
+        </div>
+    </div>
 {% endblock %}
 
 {% block javascripts %}
-    <script src="{{ asset('js/jquery.dataTables.min.js') }}"></script>
-    <script src="{{ asset('js/jquery.dataTables.min.js') }}"></script>
-    <script src="{{ asset('js/jquery.blockUI.js') }}"></script>
+    {{ parent() }}
 
     <script>
         $(document).ajaxStart(function(){
@@ -88,11 +55,11 @@
                     {data: "name"},
                     {data: "email"},
                     {data: "category"},
-                    {data: "action", width: '10%'}
+                    {data: "action", width: '20%'}
                 ],
                 "createdRow": function ( row, data, index ) {
-                    var id = $('td', row).eq(4).text();
-                    $('td', row).eq(4).html('<a href="'+Routing.generate('admin_match_find', {id: id})+'" class="btn btn-danger">Find match</a>');
+                    var id = $('td', row).eq(4).text().s;
+                    $('td', row).eq(4).html('<a href="'+Routing.generate('admin_ajax_connection_request_mark_pending', {id: id})+'" class="btn btn-warning btn-pending">Make pending</a>&nbsp;&nbsp;<a href="'+Routing.generate('admin_match_find', {id: id})+'" class="btn btn-danger">Find match</a>');
                 }
             });
 
@@ -116,6 +83,18 @@
                 $(this).closest(".dropdown").removeClass('open');
 
                 showMoreResults($(this).data('city-id'), 1);
+            });
+
+            $('#match-users').on('click', 'a.btn-pending', function(e){
+                var $this = $(this);
+
+                $.get($this.attr('href'), function(resp) {
+                    if (resp.success) {
+                        window.location.reload();
+                    }
+                });
+
+                return false;
             });
 
             var showMoreResults = function (id, page) {
