Fixed some random text

--- a/app/Resources/views/admin2/default/index.html.twig
+++ b/app/Resources/views/admin2/default/index.html.twig
@@ -58,7 +58,7 @@
                     {data: "action", width: '20%'}
                 ],
                 "createdRow": function ( row, data, index ) {
-                    var id = $('td', row).eq(4).text().s;
+                    var id = $('td', row).eq(4).text();
                     $('td', row).eq(4).html('<a href="'+Routing.generate('admin_ajax_connection_request_mark_pending', {id: id})+'" class="btn btn-warning btn-pending">Make pending</a>&nbsp;&nbsp;<a href="'+Routing.generate('admin_match_find', {id: id})+'" class="btn btn-danger">Find match</a>');
                 }
             });
