--- a/app/Resources/views/admin2/default/base.html.twig
+++ b/app/Resources/views/admin2/default/base.html.twig
@@ -28,7 +28,7 @@
                 <div class="col-md-8">
                     <a href="{{ path('admin_start2') }}" class="btn btn-default btn-md">{{ 'match.find_matches'|trans }}</a>
                     <a href="{{ path('admin_manual') }}" class="btn btn-default btn-md">{{ 'match.manual_handling'|trans }}</a>
-
+                    <a href="{{ path('admin_inspection') }}" class="btn btn-default btn-md">{{ 'match.inspection'|trans }}</a>
                     <a href="#" class="btn btn-default btn-md">{{ 'match.statistics'|trans }}</a>
                 </div>
             </div>
