Update youtube links old ones were broken

--- a/app/Resources/views/static/musicfriend.html.twig
+++ b/app/Resources/views/static/musicfriend.html.twig
@@ -34,7 +34,7 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
                 </div>
                 <div class="video__box col-sm-12 col-md-4">
                     <div class="video__box--media">
-                        <iframe src="https://www.youtube.com/embed/upx6MPPszRU" frameborder="0" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/jNq1AAvY16c" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p class="video__box--text">
                         {{ 'register.musicfriend.video3'|trans }}
@@ -42,7 +42,7 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
                 </div>
                 <div class="video__box col-sm-12 col-md-4">
                     <div class="video__box--media">
-                        <iframe src="https://www.youtube.com/embed/pmsbyZqwiLM" frameborder="0" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/g9aMHjZYTdA" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p class="video__box--text">
                         {{ 'register.musicfriend.video1'|trans }}
@@ -50,7 +50,7 @@ Vi vet att musik är en stark förenande kraft. Därför startar vi nu Musikkomp
                 </div>
                 <div class="video__box col-sm-12 col-md-4">
                     <div class="video__box--media">
-                        <iframe src="https://www.youtube.com/embed/HX9fMo8crg4" frameborder="0" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/gmjeHOGePXQ" frameborder="0" allowfullscreen></iframe>
                     </div>
                     <p class="video__box--text">
                         {{ 'register.musicfriend.video2'|trans }}
