--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -20,7 +20,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">{{ 'Name'|trans }}</label>
                             <div class="col-sm-10">
-                                <div class="form-control" id="fullName">{{ user.fullName }}</div>
+                                <div class="form-control" id="fullName">{{ user.fullName }}&nbsp;({{ user.genderName|trans }})</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -50,7 +50,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">{{ 'Area'|trans }}</label>
                             <div class="col-sm-10">
-                                <div class="form-control" id="area">{{ user.municipality.name }}</div>
+                                <div class="form-control" id="area">{{ connectionRequest.city.name }}, {{ user.municipality.name }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -62,7 +62,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">{{ 'Type'|trans }}</label>
                             <div class="col-sm-10">
-                                <div class="form-control" id="musicFriendType">{{ user.musicFriendType }}</div>
+                                <div class="form-control" id="musicFriendType">{{ user.musicFriendType|trans }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -82,7 +82,7 @@
                         <div class="form-group">
                             <label class="col-sm-12">{{ 'Match Request'|trans }}</label>
                             <div class="col-sm-12">
-                                <div class="form-control textarea" id="firstConnectionRequestComment">{{ user.firstConnectionRequestComment|raw }}</div>
+                                <div class="form-control textarea" id="firstConnectionRequestComment">{{ connectionRequest.comment|raw }}</div>
                             </div>
                         </div>
                         <div class="form-group">
