--- a/app/Resources/views/email/match_email.html.twig
+++ b/app/Resources/views/email/match_email.html.twig
@@ -1,16 +1,16 @@
 {% trans with {
     '%user_name%': user.fullName,
-    '%match_music_friend%': matchUser.musicFriend ? 'Music Buddy': 'Fika Buddy',
-    '%match_his_her%': matchUser.gender == 'M' ? 'His' : 'Her',
+    '%match_music_friend%': matchUser.musicFriend ? 'Music Buddy'|trans: 'Fika Buddy'|trans,
+    '%match_his_her%': matchUser.gender == 'M' ? 'His'|trans : 'Her'|trans,
     '%match_name%': matchUser.fullName,
     '%match_categories%': matchUser.getMatchedCategories(user),
     '%match_age%': matchUser.age,
     '%match_area%': matchUser.municipality.name,
     '%match_from%': matchUser.countryName,
-    '%match_gender%': matchUser.gender == 'M' ? 'He' : 'She',
+    '%match_gender%': matchUser.gender == 'M' ? 'He'|trans : 'She'|trans,
     '%match_city%': request.city.name,
     '%match_email%': matchUser.email,
-    '%match_fika_buddies%': matchUser.musicFriend ? 'public place': 'café',
-    '%match_your_fika%': matchUser.musicFriend ? 'music meeting': 'your fika',
-    '%match_fika_buddy%': matchUser.musicFriend ? 'a pleasant music meeting': 'a pleasant fika',
+    '%match_fika_buddies%': matchUser.musicFriend ? 'public place'|trans: 'café'|trans,
+    '%match_your_fika%': matchUser.musicFriend ? 'music meeting'|trans: 'your fika'|trans,
+    '%match_fika_buddy%': matchUser.musicFriend ? 'a pleasant music meeting'|trans: 'a pleasant fika'|trans,
 } %}match.email.user{% endtrans %}
