--- a/app/Resources/views/admin2/default/inspection.html.twig
+++ b/app/Resources/views/admin2/default/inspection.html.twig
@@ -3,7 +3,7 @@
 {% block default_content %}
 
     <div class="row" style="margin-top: 40px; margin-bottom: 20px;">
-        <h1>{{ 'inspection.title.inspection_connection_requests' }}</h1>
+        <h1>{{ 'Inspection Connection Requests'|trans }}</h1>
     </div>
     {% for uninspectedRequest in uninspectedRequests %}
         {% set user = uninspectedRequest.user %}
@@ -87,9 +87,9 @@
                     </div>
                 </div>
                 <div class="col-md-10 col-md-offset-1">
-                    <a href="{{ path('admin_ajax_connection_request_mark_inspected', {id: uninspectedRequest.id}) }}" class="btn btn-large btn-default btn-approve">{{ 'btn.approve'|trans }}</a>&nbsp;
-                    <a href="{{ path('admin_connection_request_mark_unpending', {id: uninspectedRequest.id}) }}" class="btn btn-large btn-default btn-unpending">{{ 'btn.make_pending'|trans }}</a>&nbsp;
-                    <a href="{{ path('admin_ajax_edit', {id: uninspectedRequest.user.id}) }}" class="btn btn-large btn-default btn-edit-profile">{{ 'btn.edit_profile'|trans }}</a>
+                    <a href="{{ path('admin_ajax_connection_request_mark_inspected', {id: uninspectedRequest.id}) }}" class="btn btn-large btn-default btn-approve">{{ 'Approve'|trans }}</a>&nbsp;
+                    <a href="{{ path('admin_connection_request_mark_unpending', {id: uninspectedRequest.id}) }}" class="btn btn-large btn-default btn-unpending">{{ 'Make Pending'|trans }}</a>&nbsp;
+                    <a href="{{ path('admin_ajax_edit', {id: uninspectedRequest.user.id}) }}" class="btn btn-large btn-default btn-edit-profile">{{ 'Edit Profile'|trans }}</a>
                 </div>
             </form>
         </div>
