--- a/app/Resources/views/email/match_email.html.twig
+++ b/app/Resources/views/email/match_email.html.twig
@@ -1,13 +1,13 @@
 {% trans with {
     '%user_name%': user.fullName,
-    '%match_music_friend%': matchUser.musicFriend ? 'Music Buddy'|trans: 'Fika Buddy'|trans,
-    '%match_his_her%': matchUser.gender == 'M' ? 'His'|trans : 'Her'|trans,
+    '%match_music_friend%': matchUser.musicFriend ? 'global.music_buddy'|trans: 'global.fika_buddy'|trans,
+    '%match_his_her%': matchUser.gender == 'M' ? 'global.His'|trans : 'global.Her'|trans,
     '%match_name%': matchUser.fullName,
     '%match_categories%': matchUser.getMatchedCategories(user),
     '%match_age%': matchUser.age,
     '%match_area%': matchUser.municipality.name,
     '%match_from%': matchUser.countryName,
-    '%match_gender%': matchUser.gender == 'M' ? 'He'|trans : 'She'|trans,
+    '%match_gender%': matchUser.gender == 'M' ? 'global.He'|trans : 'global.She'|trans,
     '%match_city%': request.city.name,
     '%match_email%': matchUser.email,
     '%match_fika_buddies%': matchUser.musicFriend ? 'public place'|trans: 'café'|trans,
