Fixed marked pending and unpending

--- a/app/Resources/views/admin2/default/inspection.html.twig
+++ b/app/Resources/views/admin2/default/inspection.html.twig
@@ -88,7 +88,7 @@
                 </div>
                 <div class="col-md-10 col-md-offset-1">
                     <a href="{{ path('admin_ajax_connection_request_mark_inspected', {id: uninspectedRequest.id}) }}" class="btn btn-large btn-default btn-approve">{{ 'Approve'|trans }}</a>&nbsp;
-                    <a href="{{ path('admin_connection_request_mark_unpending', {id: uninspectedRequest.id}) }}" class="btn btn-large btn-default btn-unpending">{{ 'Remove Pending'|trans }}</a>&nbsp;
+                    <a href="{{ path('admin_ajax_connection_request_mark_pending_or_unpending', {id: uninspectedRequest.id}) }}" class="btn btn-large btn-default btn-unpending">{% if uninspectedRequest.pending %}{{ 'Remove Pending'|trans }}{% else %}{{ 'Make Pending'|trans }}{% endif %}</a>&nbsp;
                     <a href="{{ path('admin_ajax_edit', {id: uninspectedRequest.user.id}) }}" class="btn btn-large btn-default btn-edit-profile">{{ 'Edit Profile'|trans }}</a>
                 </div>
             </form>
@@ -107,10 +107,24 @@
 
     <script>
         $(document).ready(function() {
-            var table = $('#match-users').DataTable({
-                "paging": false,
-                "bInfo": false,
-                "pageLength": 100
+            $('.btn-approve').click(function(){
+                var $this = $(this);
+
+                $.get($this.attr('href'), function (resp){
+                    if (resp.success) {
+                        $this.html('disabled');
+                    }
+                });
+            });
+
+            $('.btn-unpending').click(function(){
+                var $this = $(this);
+
+                $.get($this.attr('href'), function (resp){
+                    if (resp.success) {
+                        $this.html(resp.label);
+                    }
+                });
             });
 
             $('body').on('click', '.btn-edit-profile', function(e){
