--- a/app/Resources/views/admin2/default/index.html.twig
+++ b/app/Resources/views/admin2/default/index.html.twig
@@ -22,7 +22,7 @@
             <tbody class="persons-list-body"></tbody>
         </table>
         <div class="text-center">
-            <a href="#" class="btn btn-lg btn-default show-more-btn disabled" data-next-page="1">{{ 'Show 25 more'|trans }}</a>
+            <a href="#" class="btn btn-lg btn-default show-more-btn disabled" data-next-page="1" style="display: none">{{ 'Show 25 more'|trans }}</a>
         </div>
     </div>
 {% endblock %}
@@ -35,19 +35,20 @@
             $('#match-users').block({
                 message: '<strong>Loading...</strong>'
             });
+
+        $(document).ready(function() {
         });
 
         $(document).ajaxStop(function(){
             $('#match-users').unblock();
         });
 
-        $(document).ready(function() {
-
             var currentCityId = {{ city.id }};
 
             var table = $('#match-users').DataTable({
                 "paging": false,
                 "bInfo": false,
+                "iDisplayLength": 1000,
                 //"bFilter": false,
                 columns:[
                     {data: 'request_date', width: '15%'},
