--- a/app/Resources/views/admin2/default/base.html.twig
+++ b/app/Resources/views/admin2/default/base.html.twig
@@ -40,5 +40,6 @@
 
 {% block javascripts %}
     <script src="{{ asset('js/jquery.dataTables.min.js') }}"></script>
+    <script src="{{ asset('js/jquery.dataTables.min.js') }}"></script>
     <script src="{{ asset('js/jquery.blockUI.js') }}"></script>
 {% endblock %}
