--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -20,7 +20,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">{{ 'Name'|trans }}</label>
                             <div class="col-sm-10">
-                                <div class="form-control" id="fullName">{{ user.fullName }}&nbsp;({{ user.genderName|trans }})</div>
+                                <div class="form-control" id="fullName">{{ user.fullName }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -50,7 +50,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">{{ 'Area'|trans }}</label>
                             <div class="col-sm-10">
-                                <div class="form-control" id="area">{{ connectionRequest.city.name }}, {{ user.municipality.name }}</div>
+                                <div class="form-control" id="area">{{ user.municipality.name }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -62,7 +62,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">{{ 'Type'|trans }}</label>
                             <div class="col-sm-10">
-                                <div class="form-control" id="musicFriendType">{{ user.musicFriendType|trans }}</div>
+                                <div class="form-control" id="musicFriendType">{{ user.musicFriendType }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -82,7 +82,7 @@
                         <div class="form-group">
                             <label class="col-sm-12">{{ 'Match Request'|trans }}</label>
                             <div class="col-sm-12">
-                                <div class="form-control textarea" id="firstConnectionRequestComment">{{ connectionRequest.comment|raw }}</div>
+                                <div class="form-control textarea" id="firstConnectionRequestComment">{{ user.firstConnectionRequestComment|raw }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -193,10 +193,12 @@
                     <div class="col-md-6">
                         <h4>{{ 'Email to '|trans }} {{ user.fullName }}</h4>
                         {{ form_widget(matchForm.email_to_user) }}
+                        {#<textarea class="form-control" rows="12">{{ 'match.email.user'|trans }}</textarea>#}
                     </div>
                     <div class="col-md-6">
                         <h4>{{ 'Email to match'|trans }}</h4>
                         {{ form_widget(matchForm.email_to_match_user) }}
+                        {#<textarea class="form-control" rows="12">{{ 'match.email.match.user'|trans }}</textarea>#}
                     </div>
                     {{ form_rest(matchForm) }}
                 </form>
@@ -227,7 +229,7 @@
             </div>
             <div class="col-md-9 presentation">
                 <div class="pull-right">
-                    <a data-href="edit_profile_link" class="btn btn-danger edit-current-profile">Edit Profile</a>&nbsp;<a data-href="mark_pending_link" class="btn btn-warning connection-requestion-mark-pending"><span data-content="mark_pending_label"></span></a>
+                    <a data-href="edit_profile_link" class="btn btn-danger edit-current-profile">Edit Profile</a>&nbsp;<a data-href="mark_pending_link" class="btn btn-warning connection-requestion-mark-pending">Make pending</a>
 
                 </div>
                 <h4><span data-content="user_info"></span> (<span data-content="matches" data-format="SpanDelimiter"></span>)</h4>
@@ -330,7 +332,7 @@
                         if ($this.hasClass('go-back')) {
                             window.location = '{{ path('admin_start2') }}';
                         } else {
-                            $this.closest('.row').remove();
+                            $('.btn-search').trigger('click');
                         }
                     }
                 });
