--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -38,7 +38,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">{{ 'Category'|trans }}</label>
                             <div class="col-sm-10">
-                                <div class="form-control" id="type">{{ user.type }}</div>
+                                <div class="form-control" id="type">{{ want_to_learn_name(user.wantToLearn) }}</div>
                             </div>
                         </div>
                         <div class="form-group">
