--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -68,7 +68,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">{{ 'Interests'|trans }}</label>
                             <div class="col-sm-10">
-                                <div class="form-control textarea" id="interests">{{ user.categoryNameString }}</div>
+                                <div class="form-control textarea" id="interests">{{ user_category_name_string(user) }}</div>
                             </div>
                         </div>
                     </div>
