--- a/app/Resources/views/admin2/default/index.html.twig
+++ b/app/Resources/views/admin2/default/index.html.twig
@@ -22,7 +22,7 @@
             <tbody class="persons-list-body"></tbody>
         </table>
         <div class="text-center">
-            <a href="#" class="btn btn-lg btn-default show-more-btn disabled" data-next-page="1">{{ 'Show 25 more'|trans }}</a>
+            <a href="#" class="btn btn-lg btn-default show-more-btn disabled" data-next-page="1" style="display: none">{{ 'Show 25 more'|trans }}</a>
         </div>
     </div>
 {% endblock %}
@@ -48,6 +48,7 @@
             var table = $('#match-users').DataTable({
                 "paging": false,
                 "bInfo": false,
+                "iDisplayLength": 1000,
                 //"bFilter": false,
                 columns:[
                     {data: 'request_date', width: '15%'},
@@ -57,8 +58,10 @@
                     {data: "action", width: '20%'}
                 ],
                 "createdRow": function ( row, data, index ) {
-                    var ids = $('td', row).eq(4).text().split('|');
-                    $('td', row).eq(4).html('<a href="'+Routing.generate('admin_ajax_connection_request_mark_pending', {id: ids[1]})+'" class="btn btn-warning btn-pending">Make pending</a>&nbsp;&nbsp;<a href="'+Routing.generate('admin_match_find', {id: ids[0]})+'" class="btn btn-danger">Find match</a>');
+                    var ids         = $('td', row).eq(4).text().split('|');
+                    var pendingText = parseInt(ids[2])? 'Remove pending': 'Make pending';
+
+                    $('td', row).eq(4).html('<a href="'+Routing.generate('admin_ajax_connection_request_mark_pending_or_unpending', {id: ids[1]})+'" class="btn btn-warning btn-pending">'+ pendingText +'</a>&nbsp;&nbsp;<a href="'+Routing.generate('admin_match_find', {id: ids[0]})+'" class="btn btn-danger">Find match</a>');
                 }
             });
 
