--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -10,7 +10,7 @@
             <div class="row" style="margin-bottom: 10px;">
                 <div class="col-md-12">
                     <div class="pull-right">
-                        <a href="{{ path('admin_ajax_edit', {id: user.id}) }}" class="btn btn-danger edit-current-profile current">{{ 'Edit profile'|trans }}</a>&nbsp;<a href="{{ path('admin_ajax_connection_request_mark_pending', {id: user.firstConnectionRequest.id}) }}" class="btn btn-warning connection-requestion-mark-pending go-back">Make pending</a>
+                        <a href="{{ path('admin_ajax_edit', {id: user.id}) }}" class="btn btn-danger edit-current-profile current">{{ 'Edit profile'|trans }}</a>&nbsp;<a href="{{ path('admin_ajax_connection_request_mark_pending_or_unpending', {id: user.firstConnectionRequest.id}) }}" class="btn btn-warning connection-requestion-mark-pending go-back">{% if user.firstConnectionRequest.pending %}Remove{% else %}Make{% endif %} pending</a>
                     </div>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                         <div class="form-group">
                             <label class="col-sm-2 control-label">{{ 'Category'|trans }}</label>
                             <div class="col-sm-10">
-                                <div class="form-control" id="type">{{ user.type }}</div>
+                                <div class="form-control" id="type">{{ want_to_learn_name(user.wantToLearn) }}</div>
                             </div>
                         </div>
                         <div class="form-group">
@@ -227,8 +227,7 @@
             </div>
             <div class="col-md-9 presentation">
                 <div class="pull-right">
-                    <a data-href="edit_profile_link" class="btn btn-danger edit-current-profile">Edit Profile</a>&nbsp;<a data-href="mark_pending_link" class="btn btn-warning connection-requestion-mark-pending">Make pending</a>
-
+                    <a data-href="edit_profile_link" class="btn btn-danger edit-current-profile">Edit Profile</a>&nbsp;<a data-href="mark_pending_link" class="btn btn-warning connection-requestion-mark-pending"><span data-content="mark_pending_label"></span></a>
                 </div>
                 <h4><span data-content="user_info"></span> (<span data-content="matches" data-format="SpanDelimiter"></span>)</h4>
                 <p class="interests">Matching interests: <span data-content="interests"></span></p>
