Disabled auto scrolling in match results

--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -374,11 +374,11 @@
                             $(".match-results-container").loadTemplate($("#template"), item, {append: true});
                         });
 
-                        if (firstItem != 0) {
+                        /*if (firstItem != 0) {
                             $('html, body').animate({
                                 scrollTop: $('#'+firstItem).offset().top
                             }, 1000);
-                        }
+                        }*/
                     }
                 });
             }
