--- a/app/Resources/views/admin2/default/index.html.twig
+++ b/app/Resources/views/admin2/default/index.html.twig
@@ -3,7 +3,7 @@
 {% block default_content %}
     <div class="row" style="margin-top: 40px;">
         <div class="col-md-12">
-            <p>Hi! Right now we have <strong class="learners-num">{{ newUsers|length }} new</strong> &amp; <strong class="established-num">{{ establishedUsers|length }} established</strong> to match in <span class="stat-city-name">{{ city.name }}</span>. Thank you for helping out!</p>
+            <p>We have <strong class="learners-num">{{ newUsers|length }} new</strong> &amp; <strong class="established-num">{{ establishedUsers|length }} established</strong> to match in <strong><span class="stat-city-name">{{ city.name }}</span></strong>.</p>
         </div>
     </div>
     <div class="row" style="margin-top: 40px;">
