--- a/app/Resources/views/email/match_email.html.twig
+++ b/app/Resources/views/email/match_email.html.twig
@@ -1,6 +1,6 @@
 {% trans with {
     '%user_name%': user.fullName,
-    '%match_music_friend%': matchUser.musicFriend ? 'global.music_buddy'|trans: 'global.fika_buddy'|trans,
+    '%match_music_friend%': matchUser.musicFriend ? 'global.music_buddy'|trans|capitalize: 'global.fika_buddy'|trans|capitalize,
     '%match_his_her%': matchUser.gender == 'M' ? 'global.his'|trans|capitalize : 'global.her'|trans|capitalize,
     '%match_name%': matchUser.fullName,
     '%match_categories%': user_matched_categories(matchUser, user),
